test/type/wrong/hm2.kk
function selfapp(x)  -> x(x)